--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,39 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <!-- Primary Meta Tags -->
+<title>الجدول اليومي لانتشار فايروس كورونا في العراق </title>
+<meta name="title" content="الجدول اليومي لانتشار فايروس كورونا في العراق ">
+<meta name="description" content="الجدول يحدث كل ساعتين من مصادر عالمية ">
+
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website">
+<meta property="og:url" content="http://coronavirusiraq.me/">
+<meta property="og:title" content="الجدول اليومي لانتشار فايروس كورونا في العراق ">
+<meta property="og:description" content="الجدول يحدث كل ساعتين من مصادر عالمية ">
+<meta property="og:image" content="http://coronavirusiraq.me/assets/images/meta.PNG">
+
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image">
+<meta property="twitter:url" content="http://coronavirusiraq.me/">
+<meta property="twitter:title" content="الجدول اليومي لانتشار فايروس كورونا في العراق ">
+<meta property="twitter:description" content="الجدول يحدث كل ساعتين من مصادر عالمية ">
+<meta property="twitter:image" content="http://coronavirusiraq.me/assets/images/meta.PNG">
+
 </head>
 <body>
   <app-root></app-root>
   <app-tabular></app-tabular>
+
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-42879332-2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-42879332-2');
+</script>
+
 </body>
 </html>
